--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/ConnectedVentures/vue-method-plugin.git"
   },
   "author": "Sam Stefan",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/ConnectedVentures/vue-method-plugin/issues"
   },
